--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "axios": "0.18.0",
     "enzyme-to-json": "3.3.3",
     "prop-types": "15.6.1",
     "react": "16.3.2",
