--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FrontEndBoilerPlate",
+  "name": "AuthFrontEnd",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Robert Yuen",
@@ -39,7 +39,8 @@
     "react-dom": "16.3.2",
     "react-router-dom": "4.2.2",
     "styled-components": "3.2.6",
-    "uuid": "3.2.1"
+    "uuid": "3.2.1",
+    "validator": "10.8.0"
   },
   "scripts": {
     "start": "webpack",
