--- a/public/now.json
+++ b/public/now.json
@@ -1,10 +1,11 @@
 {
-    "name": "royulogin",    
+    "version": "1",
+    "name": "royulogin",
     "alias": ["royuloginstatic"],
     "type": "static",
     "static": {
         "trailingSlash": false,
         "directoryListing": false,
         "cleanUrls": true
-    }    
+    }
 }
